# iicw-server

./: .gitignore  LICENSE  server.cabal  stack.yaml
src/: Main.hs  Server.hs
tests/: HLint.hs  test.hs
