name:                server
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/oherrala/server#readme
license:             MIT
license-file:        LICENSE
author:              Ossi Herrala
maintainer:          oherrala@gmail.com
copyright:           2016 Ossi Herrala
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable server
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Server
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , bytestring
                     , cereal
                     , network

test-suite hlint
  hs-source-dirs:      tests
  main-is:             HLint.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , hlint

test-suite test
  hs-source-dirs:      tests src
  main-is:             test.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , tasty
                     , tasty-quickcheck
                     , attoparsec
                     , bytestring
                     , cereal
                     , network
                     , bytestring-arbitrary
